# drf_todolist

./: .gitignore  README.md  pyproject.toml  requirements.txt
todo/: models.py  serializers.py  urls.py  views.py
todolist/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0002_user_age_user_gender_user_introduction_user_name.py  0003_alter_user_gender.py  0004_alter_user_gender.py
